--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
 <link rel="icon" type="image/png" sizes="64x64" href="http://howesweetenterprises.com/Site%20Resources/Images/HSElogo64.png">
-<link rel="apple-touch-icon" sizes="180x180" href="http://howesweetenterprises.com/Site%20Resources/Images/HSElogo180.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/HSElogo180.png">
 	<title>Howesweet Enterprises</title>
 	
 </head>
@@ -26,7 +26,7 @@
 <p>CLOSED for the Season, We'll see you again in May 2019!!</p>
 </div>
 </div>
-<a class="w3-bar-item w3-button w3-padding-large" href="home.html">HOME</a>
+<a class="w3-bar-item w3-button w3-padding-large" href="index.html">HOME</a>
 
 <div class="w3-dropdown-hover"><button class="w3-padding-large w3-button" title="Menu">MENU</button>
 
@@ -46,7 +46,7 @@
 }
 </style>
 
-<p><img alt="Logo" class="center" id="img1" src="/Site%20Resources/Images/HSElogo.png"></p>
+<p><img alt="Logo" class="center" id="img1" src="/HSElogo.png"></p>
 
 <div class="w3-content w3-content w3-center w3-padding-10" style="max-width:2000px;margin-top:20px;">
 <!-- Home -->
@@ -84,7 +84,7 @@
 display: block;
     margin-left: auto;
     margin-right: auto;
-    background-image: url("/Site Resources/Images/5459.jpeg");
+    background-image: url("/5459.jpeg");
    
     
     background-repeat: no-repeat;
