--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
-<link rel="icon" type="image/png" sizes="64x64" href="http://howesweetenterprises.com/Site%20Resources/Images/HSElogo64.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/HSElogo180.png">
+<link rel="icon" type="image/png" sizes="64x64" href="HSElogo64.png">
+<link rel="apple-touch-icon" sizes="180x180" href="HSElogo180.png">
 	<title>Howesweet Enterprises</title>
 	
 </head>
@@ -46,7 +46,7 @@
 }
 </style>
 
-<p><img alt="Logo" class="center" id="img1" src="/HSElogo.png"></p>
+<p><img alt="Logo" class="center" id="img1" src="HSElogo.png"></p>
 
 <div class="w3-content w3-content w3-center w3-padding-10" style="max-width:2000px;margin-top:20px;">
 <!-- Home -->
@@ -148,7 +148,7 @@ input[type=submit]:hover {
 }
 </style>
 <body>
-<form action="mailto:andrew@howesweetenterprises.com?subject=Howesweet Enterprises Mailing List " method="post" enctype="text/plain">
+<form action="mailto:howesweet.enterprises@gmail.com?subject=Howesweet Enterprises Mailing List " method="post" enctype="text/plain">
   <div class="container w3-text-white w3-center">
     <p><b class="w3-half w3-xlarge">SIGN UP TO GET UPDATES ON SPECIALS, OFFERS, AND EVENTS.&nbsp&nbsp&nbsp&nbsp</b></p>
   
@@ -180,14 +180,14 @@ text-color: white
 </div>
 
 <div class="w3-col m6">
-<form action="mailto:andrew@howesweetenterprises.com?subject=Howesweet Enterprises Contact " method="post" enctype="text/plain">
+<form action="mailto:howesweet.enterprises@gmail.com?subject=Howesweet Enterprises Contact " method="post" enctype="text/plain">
 <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
 <div class="w3-half"><u><input class="w3-input w3-border" name="Name" placeholder="Name" required="" type="text" /> </u></div>
 
 <div class="w3-half"><u><input class="w3-input w3-border" name="Email" placeholder="Email" required="" type="text" /> </u></div>
 </div>
 <u><input class="w3-input w3-border" name="Message" placeholder="Message" required="" type="text" />
-<button class="mailto:andrew@howesweetenterprises.com w3-button w3-white w3-section w3-right" type="submit">SEND</button> </u></form>
+<button class="mailto:howesweet.enterprises@gmail.com w3-button w3-white w3-section w3-right" type="submit">SEND</button> </u></form>
 </div>
 </div>
 </div>
