--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
   
   <div class="w3-container w3-half">
   <img2>
-    <img src="IMG_2000.png" style="width:80%"> 
+    <img src="IMG_2000.jpeg" style="width:80%"> 
   </img2>
   </div>
 </div>
