--- a/scheduling.html
+++ b/scheduling.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
-<link rel="icon" type="image/png" sizes="64x64" href="http://howesweetenterprises.com/Site%20Resources/Images/HSElogo64.png">
-<link rel="apple-touch-icon" sizes="180x180" href="http://howesweetenterprises.com/Site%20Resources/Images/HSElogo180.png">
+<link rel="icon" type="image/png" sizes="64x64" href="HSElogo64.png">
+<link rel="apple-touch-icon" sizes="180x180" href="HSElogo180.png">
 	<title>Howesweet Enterprises</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
 <div class="w3-container w3-center">
 </div>
 </div>
-<a class="w3-bar-item w3-button w3-padding-large" href="home.html">HOME</a>
+<a class="w3-bar-item w3-button w3-padding-large" href="index.html">HOME</a>
 
 <div class="w3-dropdown-hover"><button class="w3-padding-large w3-button" title="Menu">MENU</button>
 
@@ -43,7 +43,7 @@
 }
 </style>
 
-<p><img alt="Logo" class="center" id="img1" src="/Site%20Resources/Images/HSElogosub.png"></p>
+<p><img alt="Logo" class="center" id="img1" src="HSElogosub.png"></p>
 
 <div class="w3-content w3-content w3-center w3-padding-10" style="max-width:2000px;margin-top:20px;">
 <!-- Home -->
@@ -91,7 +91,7 @@
 
 <h2 class="w3-center">Fill out the Form below or Call (207)249-9972</h2>
 <div id="mgn">
-<form action="mailto:andrew@howesweetenterprises.com?subject=Howesweet Enterprises Scheduling " method="post" enctype="text/plain">
+<form action="mailto:howesweet.enterprises@gmail.com?subject=Howesweet Enterprises Scheduling " method="post" enctype="text/plain">
 <h1>Appointment Request Form</h1>
 <div>
 <div><u><input class="w3-input w3-border" name="Name" placeholder="Name" required="" type="text" /> </u></div>
@@ -105,7 +105,7 @@
 <input class="w3-input w3-border" name="Dates" placeholder="Available Appointment Date(s) " type="text" />
 <p>*Available Appointment Date(s) not Guaranteed</p>
 
-<button class="mailto:andrew@howesweetenterprises.com w3-button w3-white w3-section w3-right" type="submit">SEND</button> </u></form>
+<button class="mailto:howesweet.enterprises@gmail.com w3-button w3-white w3-section w3-right" type="submit">SEND</button> </u></form>
 </div>
 </body>
 
