--- a/testimonials.html
+++ b/testimonials.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
-	<link href="http://howesweetenterprises.com/Site%20Resources/Images/HSElogo64.png" rel="icon" sizes="64x64" type="image/png" />
-	<link href="http://howesweetenterprises.com/Site%20Resources/Images/HSElogo180.png" rel="apple-touch-icon" sizes="180x180" />
+	<link href="HSElogo64.png" rel="icon" sizes="64x64" type="image/png" />
+	<link href="HSElogo180.png" rel="apple-touch-icon" sizes="180x180" />
 	<title>Howesweet Enterprises</title>
 </head>
 <body class="w3-text-white" style="background-color:black">
@@ -50,7 +50,7 @@
 <div class="w3-panel w3-black">
 <div class="w3-container w3-center "></div>
 </div>
-<a class="w3-bar-item w3-button w3-padding-large" href="home.html">HOME</a>
+<a class="w3-bar-item w3-button w3-padding-large" href="index.html">HOME</a>
 
 <div class="w3-dropdown-hover"><button class="w3-padding-large w3-button" title="Menu">MENU</button>
 
@@ -69,7 +69,7 @@
     margin-top: 200px;
 }
 </style>
-<p><img alt="Logo" class="center" id="img1" src="/Site%20Resources/Images/HSElogosub.png" /></p>
+<p><img alt="Logo" class="center" id="img1" src="HSElogosub.png" /></p>
 
 <div class="w3-content w3-center w3-padding-10" style="max-width:2000px;margin-top:20px;"><!-- Home -->
 <h2 class="w3-wide w3-text-white"><b>TESTIMONIALS</b></h2>
