--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ input[type=submit]:hover {
     <input type="text" placeholder="Name" name="name"  class="w3-input w3-border w3-quarter">
     <input type="text" placeholder="Email" name="email"  class="w3-input w3-border w3-quarter">
     
-    <button class="mailto:andrew@howesweetenterprises.com w3-button w3-white w3-section" type="submit" >SIGN UP</button>
+    <button href="mailto:howesweet.enterprises@gmail.com w3-button w3-white w3-section" type="submit" >SIGN UP</button>
   </form>
   </div>
 </body>
@@ -176,7 +176,7 @@ text-color: white
 <div class="w3-col m6 w3-large w3-margin-bottom" > 
 &#128205 Hermon, ME<br>
 &#128241 Phone: <a class="w3-button" href="tel:2072499972">(207)249-9972</a><br>
-&#128187 Email: <a class="w3-button" <a href="mailto:andrew@howesweetenterprises.com">andrew@howesweetenterprises.com</a>
+&#128187 Email: <a class="w3-button" <a href="mailto:howesweet.enterprises@gmail.com">howesweet.enterprises@gmail.com</a>
 </div>
 
 <div class="w3-col m6">
