--- a/index.html
+++ b/index.html
@@ -147,18 +147,18 @@ input[type=submit]:hover {
     opacity: 0.8;
 }
 </style>
-<body>
-<form action="mailto:howesweet.enterprises@gmail.com?subject=Howesweet Enterprises Mailing List " method="post" enctype="text/plain">
-  <div class="container w3-text-white w3-center">
-    <p><b class="w3-half w3-xlarge">SIGN UP TO GET UPDATES ON SPECIALS, OFFERS, AND EVENTS.&nbsp&nbsp&nbsp&nbsp</b></p>
+//<body>
+//<form action="mailto:howesweet.enterprises@gmail.com?subject=Howesweet Enterprises Mailing List " method="post" enctype="text/plain">
+ //<div class="container w3-text-white w3-center">
+  //  <p><b class="w3-half w3-xlarge">SIGN UP TO GET UPDATES ON SPECIALS, OFFERS, AND EVENTS.&nbsp&nbsp&nbsp&nbsp</b></p>
   
-    <input type="text" placeholder="Name" name="name"  class="w3-input w3-border w3-quarter">
-    <input type="text" placeholder="Email" name="email"  class="w3-input w3-border w3-quarter">
+   // <input type="text" placeholder="Name" name="name"  class="w3-input w3-border w3-quarter">
+   // <input type="text" placeholder="Email" name="email"  class="w3-input w3-border w3-quarter">
     
-    <button href="mailto:howesweet.enterprises@gmail.com w3-button w3-white w3-section" type="submit" >SIGN UP</button>
-  </form>
-  </div>
-</body>
+   // <button href="mailto:howesweet.enterprises@gmail.com w3-button w3-white w3-section" type="submit" >SIGN UP</button>
+ // </form>
+//  </div>
+//</body>
 
 <u><!-- The Contact Section --> </u>
 
